# streamlit-clustering

./: generate_data.py  main.py  mock_data.csv  pyproject.toml
.streamlit/: config.toml
