[project]
name = "streamlit-clustering"
version = "0.1.0"
description = ""
authors = [
    {name = "Romain Florentz",email = "romain@heaviside.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
